package create.abstractFactoryPattern.Product.computer;

public abstract class Computer {
}
