package create.abstractFactoryPattern.Product.computer;

public class LenovoComputer extends Computer {
}
