package create.abstractFactoryPattern.Product.computer;

public class XiaomiComputer extends Computer {
}
