package create.abstractFactoryPattern.Product.phone;

public class LenovoPhone extends Phone {
}
