package create.abstractFactoryPattern.Product.phone;

public abstract class Phone {
}
