package create.abstractFactoryPattern.Product.phone;

public class XiaomiPhone extends Phone {
}
